--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/better-sqlite3": "^7.6.12",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
