--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@types/better-sqlite3": "^7.6.12",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
